--- a/src/Component/contact/contact.scss
+++ b/src/Component/contact/contact.scss
@@ -2,31 +2,36 @@
 
 .contact{
     height: calc(100vh - 100px);
-    max-width: 1366px;
-    width: 68vw;
-    margin: auto;
+    width: 100%;
+    padding-left:20%;
+    padding-right:20%;
     display: flex;
     align-items:center;
     gap: 8vw;
 
     @include mobile {
+        flex: 1;
         width: 100%;
-        padding: 1vw;
+        gap:0;
         flex-direction: column;
       }
 
     .textContainer{
-        flex:1;
         display: flex;
         flex-direction: column;
         gap: 2.5vh;
         color: lightgray;
+        width:50%;
 
         @include mobile {
-            gap: 20px;
+            gap: 2.5vh;
             text-align: center;
             align-items: center;
-            margin-top: 70px;
+            padding-top: 10%;
+            padding-bottom: 10%;
+            width: 100%;
+
+
           }
         
         h1{
@@ -58,19 +63,37 @@
     }
 
     .formContainer{
-        flex:1;
         position: relative;
+        width: 50%;
         @include mobile {
-            padding: 50px;
+            flex: 1;
             width: 100%;
+
         }
 
         .phoneSvg{
+            width:100%;
+            height: 100%;
             stroke: orange;
             position: absolute;
             margin: auto;
             z-index: -1;
-            stroke-width:0.0002;
+            stroke-width: 0.1;
+            @include mobile {
+                width:90vw;
+                height: 90vw;
+            }
+            svg{
+                width:100%;
+                height: 100%;
+                
+                path{
+                    transform: scale(25);
+                    @include mobile {
+                        transform: scale(11.2);
+                    }
+                }
+            }
         }
 
         form{
