--- a/src/Component/navbar/navbar.scss
+++ b/src/Component/navbar/navbar.scss
@@ -5,8 +5,7 @@
     z-index: 999;
 
     .wrapper{
-        max-width: 1366px;
-        width: 68vw;
+        width: 60vw;
         margin: auto;
         display: flex;
         align-items: center;
@@ -16,6 +15,7 @@
         @include mobile {
             justify-content: flex-end;
             padding: 20px;
+            width:100%;
         }
 
         span{
@@ -28,14 +28,14 @@
             display: flex;
             gap: 18px;
             @include mobile {
-                gap: 1vw;
+                gap: 2vw;
             }
             img{
                 width: 60px;
                 height: 60px;
                 @include mobile {
-                    width: 3vh;
-                    height: 3vh;
+                    width: 60px;
+                    height: 60px;
                 }
             }
         }
