--- a/src/Component/summary/summary.scss
+++ b/src/Component/summary/summary.scss
@@ -22,12 +22,12 @@
         align-items: center;
         gap:5%;
         @include mobile{
-            padding-top: 0%;
-            padding-bottom: 100px;
+            padding-top: 5%;
+            padding-bottom: 10%;
             padding-left: 5%;
             padding-right: 5%;
             flex-direction: column;
-            gap:0;
+            gap:10%;
         }
 
 
@@ -43,7 +43,7 @@
     
             z-index: 2;
             @include mobile {
-                height: 50%;
+                height: 60%;
                 width: 100%;
 
     
@@ -67,11 +67,11 @@
             right:50vw;
             display: flex;
             flex-direction: column;
-            justify-content: center;
+            justify-content: space-between;
             gap: 6vh;
 
             @include mobile {
-                height: 50%;
+                height: 40%;
                 width: 100%;
                 gap: 1vh;
                 align-items: center;
