--- a/src/Component/about/about.scss
+++ b/src/Component/about/about.scss
@@ -9,8 +9,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-
-
+    top:100px;
 
     .aboutContent{
         height: 90%;
