--- a/src/Component/parallax/parallax.scss
+++ b/src/Component/parallax/parallax.scss
@@ -2,8 +2,9 @@
 
 .parallax{
     width: 100%;
-    height: 100%;
+    height: calc(100% - 100px);
     position: relative;
+    top: 100px;
     display: flex;
     align-items: center;
     justify-content: center;
