--- a/src/Component/summary/summary.scss
+++ b/src/Component/summary/summary.scss
@@ -3,6 +3,7 @@
 .summary{
     height: calc(100vh - 100px);
     width:100%;
+    top:100px;
     overflow: hidden;
     background: linear-gradient(180deg, #0c0c1d, #111132);
     position: relative;
