--- a/src/Component/contact/contact.scss
+++ b/src/Component/contact/contact.scss
@@ -1,134 +1,128 @@
 @import "../../app.scss";
 
-.contact{
-    height: calc(100vh - 100px);
+.contact {
+  height: calc(100vh - 100px);
+  width: 100%;
+  padding-left: 20%;
+  padding-right: 20%;
+  display: flex;
+  align-items: center;
+  gap: 8vw;
+  position: relative;
+  top: 100px;
+
+  @include mobile {
+    flex: 1;
     width: 100%;
-    padding-left:20%;
-    padding-right:20%;
+    gap: 0;
+    flex-direction: column;
+  }
+
+  .textContainer {
     display: flex;
-    align-items:center;
-    gap: 8vw;
-    position: relative;
-    top:100px;
+    flex-direction: column;
+    gap: 2.5vh;
+    color: lightgray;
+    width: 50%;
 
     @include mobile {
-        flex: 1;
+      gap: 2.5vh;
+      text-align: center;
+      align-items: center;
+      padding-top: 10%;
+      padding-bottom: 10%;
+      width: 100%;
+    }
+
+    h1 {
+      font-size: 5vw;
+      line-height: 5vw;
+
+      @include mobile {
+        font-size: 7vw;
+        line-height: 6vw;
+      }
+    }
+
+    h2 {
+      font-size: 2vw;
+      line-height: 2vw;
+      @include mobile {
+        font-size: 5vw;
+        line-height: 5vw;
+      }
+    }
+    span {
+      font-size: 1.5vw;
+      font-weight: 300;
+      @include mobile {
+        font-size: 3vw;
+      }
+    }
+  }
+
+  .formContainer {
+    position: relative;
+    width: 50%;
+    @include mobile {
+      flex: 1;
+      width: 100%;
+    }
+
+    .phoneSvg {
+      width: 100%;
+      height: 100%;
+      stroke: orange;
+      position: absolute;
+      margin: auto;
+      z-index: -1;
+      stroke-width: 0.1;
+      @include mobile {
+        width: 90vw;
+        height: 90vw;
+      }
+      svg {
         width: 100%;
-        gap:0;
-        flex-direction: column;
+        height: 100%;
+
+        path {
+          transform: scale(20);
+          @include mobile {
+            transform: scale(11.2);
+          }
+        }
+      }
+    }
+
+    form {
+      display: flex;
+      flex-direction: column;
+      gap: 2vh;
+
+      input,
+      textarea {
+        padding: 2vh;
+        background-color: transparent;
+        border: 1px solid lightgray;
+        color: lightgray;
+        border-radius: 5px;
+        @include mobile {
+          padding: 2vh;
+        }
       }
 
-    .textContainer{
-        display: flex;
-        flex-direction: column;
-        gap: 2.5vh;
-        color: lightgray;
-        width:50%;
-
+      button {
+        padding: 2vh;
+        background-color: orange;
+        border: none;
+        color: #0c0c1d;
+        border-radius: 5px;
+        cursor: pointer;
+        font-weight: 500;
         @include mobile {
-            gap: 2.5vh;
-            text-align: center;
-            align-items: center;
-            padding-top: 10%;
-            padding-bottom: 10%;
-            width: 100%;
-
-
-          }
-        
-        h1{
-            font-size: 5vw;
-            line-height: 5vw;
-
-            @include mobile {
-                font-size: 7vw;
-                line-height: 6vw;
-              }
+          padding: 2vh;
         }
-        
-        h2{
-            font-size: 2vw;
-            line-height: 2vw;
-            @include mobile {
-                font-size: 5vw;
-                line-height: 5vw;
-              }
-        }
-        span{
-            font-size: 1.5vw;
-            font-weight: 300;
-            @include mobile {
-                font-size: 3vw;
-
-              }
-        }
+      }
     }
-
-    .formContainer{
-        position: relative;
-        width: 50%;
-        @include mobile {
-            flex: 1;
-            width: 100%;
-
-        }
-
-        .phoneSvg{
-            width:100%;
-            height: 100%;
-            stroke: orange;
-            position: absolute;
-            margin: auto;
-            z-index: -1;
-            stroke-width: 0.1;
-            @include mobile {
-                width:90vw;
-                height: 90vw;
-            }
-            svg{
-                width:100%;
-                height: 100%;
-                
-                path{
-                    transform: scale(20);
-                    @include mobile {
-                        transform: scale(11.2);
-                    }
-                }
-            }
-        }
-
-        form{
-            display: flex;
-            flex-direction: column;
-            gap: 2vh;
-    
-            input,textarea{
-                padding: 2vh;
-                background-color: transparent;
-                border: 1px solid lightgray;
-                color: lightgray;
-                border-radius: 5px;
-                @include mobile {
-                    padding: 2vh;
-                  }
-            }
-
-            button{
-                padding: 2vh;
-                background-color: orange;
-                border: none;
-                color: #0c0c1d;
-                border-radius: 5px;
-                cursor: pointer;
-                font-weight: 500;
-                @include mobile {
-                    padding: 2vh;
-                  }
-            }
-
-        }
-        
-
-    }
+  }
 }
