--- a/src/Component/project/projectCard/projectCard.scss
+++ b/src/Component/project/projectCard/projectCard.scss
@@ -1,124 +1,110 @@
 @import "../../../app.scss";
 
-.projectCard{
-    background:linear-gradient(215deg, #2e2e70, #111132);;
-    width: calc(45vw - 1rem);
-    border-radius: 3rem;
-    border: 2px;
-    padding: 2rem;
-    margin: 0.5rem;
+.projectCard {
+  background: linear-gradient(215deg, #2e2e70, #111132);
+  width: calc(45vw - 1rem);
+  border-radius: 3rem;
+  border: 2px;
+  padding: 2rem;
+  margin: 0.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: start;
+  color: lightgray;
+  scroll-snap-align: start;
+  @include mobile {
+    width: calc(90vw - 1rem);
+  }
+
+  .title {
+    width: 100%;
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
     justify-content: flex-start;
-    align-items: start;
-    color:lightgray;
-    scroll-snap-align: start;
+
     @include mobile {
-        width: calc(90vw - 1rem);
+    }
+    p {
+      font-size: 3rem;
+      font-weight: 500;
+      @include mobile {
+        font-size: 2rem;
+      }
+    }
+  }
+
+  .content {
+    width: 100%;
+    height: calc(100% - 3rem);
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-around;
+    gap: 1rem;
+    @include mobile {
+      height: calc(100% - 2rem);
+      gap: 1rem;
     }
 
+    .skills {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      flex-wrap: wrap;
+      gap: 0.5rem;
 
-    .title{
-        width:100%;
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        justify-content: flex-start;
-
+      .skill {
+        margin-block: 0.125rem;
+        font-size: 1rem;
+        padding-inline: 2rem;
+        background: #505064;
+        border-radius: 1.5rem;
         @include mobile {
+          padding-inline: 1rem;
         }
-        p{
-            font-size: 3rem;
-            font-weight: 500;
-            @include mobile {
-                font-size: 2rem;
-            }
-        }
-
-        
-        
-
+      }
     }
 
-    .content{
-        width:100%;
-        height: calc(100% - 3rem);
+    .description {
+      font-size: 1.5rem;
+      font-weight: 400;
+      position: relative;
+      overflow-y: scroll;
+      list-style-position: inside;
+      list-style-type: disc;
+      @include mobile {
+        font-size: 1rem;
+      }
+    }
+    .buttons {
+      width: 100%;
+      font-size: 1.5rem;
+      font-weight: 400;
+      position: relative;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-evenly;
+      align-items: center;
+      @include mobile {
+        font-size: 0.75rem;
+      }
+
+      a {
+        height: 3rem;
+        padding-inline: 2rem;
+        padding-block: 2px;
+        background: #505064;
+        border-radius: 1.5rem;
         display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        justify-content: space-around;
-        gap:1rem;
+        flex-direction: row;
+        align-items: center;
         @include mobile {
-            height: calc(100% - 2rem);
-            gap:1rem;
+          height: 1.5rem;
+          padding-inline: 1rem;
         }
-
-        .skills{
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            flex-wrap: wrap;
-            gap:0.5rem;
-
-            .skill{
-                margin-block: 0.125rem;
-                font-size: 1rem;
-                padding-inline: 2rem;
-                background: #505064;
-                border-radius: 1.5rem;
-                @include mobile {
-                    padding-inline: 1rem;
-                }
-            }
-        }
-            
-        .description{
-            
-            font-size: 1.5rem;
-            font-weight: 400;
-            position: relative;
-            overflow-y: scroll;
-            list-style-position: inside;
-            list-style-type: disc;
-            @include mobile {
-                font-size: 1rem;
-            }
-        
-        }
-        .buttons{
-            width:100%;
-            font-size: 1.5rem;
-            font-weight: 400;
-            position: relative;
-            display: flex;
-            flex-direction: row;
-            justify-content: space-evenly;
-            align-items: center;
-            @include mobile {
-                font-size: 0.75rem;
-            }
-            
-            a{
-                height: 3rem;
-                padding-inline: 2rem;
-                padding-block: 2px;
-                background: #505064;
-                border-radius: 1.5rem;
-                display: flex;
-                flex-direction: row;
-                align-items: center;
-                @include mobile {
-                    height: 1.5rem;
-                    padding-inline: 1rem;
-                }
-            }
-            
-        }
+      }
     }
-
-    
-    
-
-
-
+  }
 }
