--- a/src/Component/parallax/parallax.scss
+++ b/src/Component/parallax/parallax.scss
@@ -14,7 +14,7 @@
     font-size: 8vw;
 
     @include mobile {
-      font-size: 8vh;
+      font-size: 3.5rem;
       text-align: center;
     }
   }
